# cruisevideo

./: .env.example  .env.production.template  .env.template  .gitignore  .pre-commit-config.yaml  .wslconfig  cruisedot.spec  generate.py  generate_batch.py  generate_video_55sec_pipeline.py  path_resolver.py  pyproject.toml  requirements.txt
.claude/: TTS_IMPROVEMENT_SPEC.md  agent17_overlay_instruction.md  agent21_pacing_instruction.md  agent36_unification_instruction.md  agent36_upgrade_instruction.md  agent3_sync_instruction.md  settings.local.json  settings.local.json.backup_20260201_121646
.claudecodeignore/: .claudecodeignore.md
LEARNING/: feedback_report_럭셔리_크루즈_숨겨진_3가지_서비스로_여행_만족도_200%_올리는_법_20260204_190023.json  feedback_report_승무원이_몰래_알려준_크루즈_꿀팁_5가지!_이것_모르면_손해봅니다_20260204_171237.json  feedback_report_크루즈_여행,_후회_없이_즐기는_핵꿀팁_3가지!_이것_모르면_손해봅니다_20260204_181840.json  feedback_report_크루즈_직원이_숨긴_3가지_충격_비밀!_20260204_163729.json
build_hooks/: runtime_hook_moviepy.py  runtime_hook_paths.py
cli/: __init__.py  auto_mode.py  batch_quality_gate.py  batch_renderer.py  config_loader.py  generation_log.py  product_loader.py  weekly_report.py
config/: API_SECURITY_SETUP.md  DELIVERY_SUMMARY.md  MIGRATION_GUIDE.md  POP_MESSAGES_REFERENCE.md  POP_MESSAGES_USAGE_GUIDE.md  README_v3.md  __init__.py  api_config.py  api_resources_config.json  api_resources_config.json.template  banned_words.txt  brand_forbidden_words.txt  brand_profiles.json  config_validator.py  credentials.json.template  cruise_config.yaml  cruise_config_landing_variables_example.yaml  cta_overlay_config.yaml  (+21 more)
(+930 files in other folders)
